2007-09-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/version.m4: Bump RTEMS_API to 4.9.
	Bump RTEMS_VERSION to 4.8.99.0.

2007-09-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/read.c, libcsupport/src/write.c: Fix spacing.

2007-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/semaphorecreatesupp.c: Fixed warning.

2007-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/dumpbuf/dumpbuf.c: Use printk.

2007-09-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/net/ppp_defs.h: Include rtems/stdint.h.
	Use uint32_t for ext_accm.

2007-09-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* pppd/auth.c, pppd/demand.c, pppd/ipcp.c, pppd/ipcp.h,
	pppd/lcp.c, pppd/lcp.h, pppd/magic.c, pppd/magic.h, pppd/options.c,
	pppd/pppd.h, pppd/sys-rtems.c, pppd/utils.c: Convert to using C99
	fixed-size types instead of BSD fixed-size types.

2007-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/stackchk/check.c: Fix alignment of output.

2007-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/monitor/monitor.h: Add network commands that were in the
	network supplement but not in the code.
	* libmisc/monitor/mon-network.c: New file.

2007-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1261/cpukit
	* posix/src/semaphorecreatesupp.c: Initialize all fields during
	semaphore creation.

2007-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1260/cpukit
	* posix/src/pthread.c: Get initial signals blocked from creating
	thread not from ourselves.

2007-09-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/watchdogtickle.c: Remove tabs.

2007-09-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1259/rtems
	* rtems/src/taskcreate.c: Initialize is_global in all cases since
	memory is not guaranteed to be zero.

2007-09-12  Sergei Organov  <osv@javad.com>

	PR 1258/rtems
	* cpukit/score/src/heapallocatealigned.c (block_allocate): New routine.